@@ -1250,6 +1250,7 @@ Richard Walker
 Larry Wall
 Kevin Walzer
 Rodrigo Steinmuller Wanderley
+Ke Wang
 Greg Ward
 Zachary Ware
 Barry Warsaw
